[gd_scene load_steps=3 format=3 uid="uid://fopkttbvmi5l"]

[ext_resource type="Theme" uid="uid://dcn0qri7xl5ii" path="res://themes/gameui_theme.tres" id="1_4hovs"]
[ext_resource type="Script" path="res://scripts/battle/ui/EffectItemUI.gd" id="2"]

[node name="EffectItemUI" type="PanelContainer"]
custom_minimum_size = Vector2(0, 24)
offset_right = 74.0
offset_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("1_4hovs")
script = ExtResource("2")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 4
text = "Lifesteal"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
